Fix circular button styles broken on firefox

--- a/src/app/components/controls/controls.css
+++ b/src/app/components/controls/controls.css
@@ -1,3 +1,3 @@
-.controls__btn {
-  min-width: 64px;
+.controls__btn svg {
+  width: 28px;
 }
