--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -17,12 +17,20 @@
 }
 
 .btn--circular {
-  padding: 1rem;
-  border-radius: 100%;
-  aspect-ratio: 2;
+  text-align: center;
+  position: relative;
   border-radius: 50%;
-  display: grid;
-  place-items: center;
+  min-width: 1.25em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.btn--circular:after {
+  content: '';
+  padding-top: 100%;
+  display: table;
 }
 
 .btn--danger {
